# BULKUS

./: .cargo.sh  .env  .gitignore  AuthKey_7HWYY5Y723.p8  README.md  file.xlsx  package.json  test.xlsx  vite.config.ts  vite.config.ts.timestamp-1663165087709.mjs
.github/workflows/: rust.yml
patches/: lodash-move+1.1.1.patch
src/: App.css  App.tsx  index.css  main.tsx  styledcomponent.ts
src-tauri/: Cargo.toml  LICENCE  build.rs  entitlements.plist  tauri.conf.json
src-tauri/check-if-email-exists/: .cargo_vcs_info.json  Cargo.toml  Cargo_back.toml
src-tauri/check-if-email-exists/src/: misc.rs  mx.rs
src-tauri/check-if-email-exists/src/smtp/: connect.rs  mod.rs
src-tauri/check-if-email-exists/src/util/: input_output.rs
src-tauri/check-if-email-exists/src_back/: lib.rs  misc.rs  mx.rs  syntax.rs
src-tauri/check-if-email-exists/src_back/smtp/: error.rs  mod.rs  parser.rs
src-tauri/check-if-email-exists/src_back/util/: input_output.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/database/: actions.rs
src-tauri/src/tools/: checkemail.rs  exel.rs  mod.rs
src/assets/: notification-icon.icns  template.xlsx
src/hooks/: fetcher.tsx  index.ts  menu.ts  useglobalDomEvents.ts
src/icons/: Addicon.tsx  Blockicon.tsx  Close.tsx  HomeIcon.tsx  PastIcon.tsx  packageicon.tsx  settings.tsx  terminalicon.tsx
src/pages/: index.tsx
src/pages/Package/: index.tsx
src/pages/addpage/: index.tsx
src/pages/settings/: index.tsx
src/pages/settings/tools/: index.ts
src/tools/: catch.ts  index.ts
